Update coin description + social links (#429)
POST endpoint to update artist coin description + social links

seems like we forgot to update `swagger-v1-full.yaml` with `/coin` get
endpoint so adding that too.
