# api/v1_coin.go
@@ -23,8 +23,12 @@ func (app *ApiServer) v1Coin(c *fiber.Ctx) error {
 			artist_coins.logo_uri,
 			artist_coins.description,
 			artist_coins.website,
+			artist_coins.x_handle,
+			artist_coins.instagram_handle,
+			artist_coins.tiktok_handle,
 			artist_coins.has_discord,
 			artist_coins.created_at,
+			artist_coins.updated_at as coin_updated_at,
 			COALESCE(artist_coin_stats.market_cap, 0) as market_cap,
 			COALESCE(artist_coin_stats.fdv, 0) as fdv,
 			COALESCE(artist_coin_stats.liquidity, 0) as liquidity,
@@ -116,8 +120,12 @@ func (app *ApiServer) v1CoinByTicker(c *fiber.Ctx) error {
 			artist_coins.logo_uri,
 			artist_coins.description,
 			artist_coins.website,
+			artist_coins.x_handle,
+			artist_coins.instagram_handle,
+			artist_coins.tiktok_handle,
 			artist_coins.has_discord,
 			artist_coins.created_at,
+			artist_coins.updated_at as coin_updated_at,
 			COALESCE(artist_coin_stats.market_cap, 0) as market_cap,
 			COALESCE(artist_coin_stats.fdv, 0) as fdv,
 			COALESCE(artist_coin_stats.liquidity, 0) as liquidity,
